任务二笔记

--- a/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/02.任务二：MyBatis基础回顾及高级应用/2021-05-20-lagou-java-01-01-02.md
+++ b/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/02.任务二：MyBatis基础回顾及高级应用/2021-05-20-lagou-java-01-01-02.md
@@ -332,65 +332,808 @@ SQL片段抽取
 ```
 
 ## 第五部分：Mybatis复杂映射开发
+### 5.1 一对一查询
+一对一查询的模型  
+>用户表和订单表的关系为，一个用户有多个订单，一个订单只从属于一个用户  
+>一对一查询的需求：查询一个订单，与此同时查询出该订单所属的用户  
+>对应的sql语句：select * from orders o,user u where o.uid=u.id;
 
+配置OrderMapper.xml
+```xml
+<mapper namespace="com.lagou.mapper.OrderMapper">
+    <resultMap id="orderMap" type="com.lagou.domain.Order">
+        <result property="id" column="id"></result>
+        <result property="ordertime" column="ordertime"></result>
+        <result property="total" column="total"></result>
+        <association property="user" javaType="com.lagou.domain.User">
+            <result column="uid" property="id"></result>
+            <result column="username" property="username"></result>
+            <result column="password" property="password"></result>
+            <result column="birthday" property="birthday"></result>
+        </association>
+    </resultMap>
+    <select id="findAll" resultMap="orderMap">
+        select * from orders o,user u where o.uid=u.id
+    </select>
+</mapper>
+```
 
+### 5.2  一对多查询
+一对多查询的模型  
+>用户表和订单表的关系为，一个用户有多个订单，一个订单只从属于一个用户  
+>一对多查询的需求：查询一个用户，与此同时查询出该用户具有的订单  
+>对应的sql语句：`select *,o.id oid from user u left join orders o on u.id=o.uid;`
 
+配置UserMapper.xml
+```xml
+<mapper namespace="com.lagou.mapper.UserMapper">
+    <resultMap id="userMap" type="com.lagou.domain.User">
+        <result column="id" property="id"></result>
+        <result column="username" property="username"></result>
+        <result column="password" property="password"></result>
+        <result column="birthday" property="birthday"></result>
+        <collection property="orderList" ofType="com.lagou.domain.Order">
+            <result column="oid" property="id"></result>
+            <result column="ordertime" property="ordertime"></result>
+            <result column="total" property="total"></result>
+        </collection>
+    </resultMap>
+    <select id="findAll" resultMap="userMap">
+        select *,o.id oid from user u left join orders o on u.id=o.uid
+    </select>
+</mapper>
+```
 
+### 5.3 多对多查询
+多对多查询的模型  
+>用户表和角色表的关系为，一个用户有多个角色，一个角色被多个用户使用  
+>多对多查询的需求：查询用户同时查询出该用户的所有角色  
+>对应的sql语句：select u.,r.,r.id rid from user u left join user_role ur on u.id=ur.user_id inner join role r on ur.role_id=r.id;  
 
+ 配置UserMapper.xml
+```xml
+<resultMap id="userRoleMap" type="com.lagou.domain.User">
+    <result column="id" property="id"></result>
+    <result column="username" property="username"></result>
+    <result column="password" property="password"></result>
+    <result column="birthday" property="birthday"></result>
+    <collection property="roleList" ofType="com.lagou.domain.Role">
+        <result column="rid" property="id"></result>
+        <result column="rolename" property="rolename"></result>
+    </collection>
+</resultMap>
+<select id="findAllUserAndRole" resultMap="userRoleMap">
+    select u.*,r.*,r.id rid from user u left join user_role ur on u.id=ur.user_id inner join role r on ur.role_id=r.id
+</select>
+```
 
+### 5.4 知识小结
+MyBatis多表配置方式：
+>一对一配置：使用做配置
+>一对多配置：使用+做配置
+>多对多配置：使用+做配
 
+## 第六部分：Mybatis注解开发
+### 6.1 MyBatis的常用注解
+>@Insert：实现新增
+>@Update：实现更新
+>@Delete：实现删除
+>@Select：实现查询
+>@Result：实现结果集封装
+>@Results：可以与@Result 一起使用，封装多个结果集
+>@One：实现一对一结果集封装
+>@Many：实现一对多结果集封装
 
+修改MyBatis的核心配置文件，我们使用了注解替代的映射文件，所以我们只需要加载使用了注解的Mapper接口即可
+```xml
+<mappers>
+    <!--扫描使用注解的类-->
+    <mapper class="com.lagou.mapper.UserMapper"></mapper>
+</mappers>
+```
+或者指定扫描包含映射关系的接口所在的包也可以
+```xml
+<mappers>
+    <!--扫描使用注解的类所在的包-->
+    <package name="com.lagou.mapper"></package>
+</mappers>
+```
 
+### 6.2 MyBatis的注解实现复杂映射开发
+实现复杂关系映射之前我们可以在映射文件中通过配置来实现，使用注解开发后，我们可以使用@Results注解，@Result注解，@One注解，@Many注解组合完成复杂关系的配置
 
+注解|说明
+---|---
+@Results|代替的是标签`<resultMap>`该注解中可以使用单个@Result注解,也可以使用@Result集合,使用格式:@Results({@Result(),@Result()})或@Results(@Result())
+@Result|代替了`<id>`标签和`<result>`标签<br>@Result中属性介绍:<br>column:数据库的列名<br>property:需要装配的属性名<br>one:需要使用@One注解(@Result(one=@One)())<br>many:需要使用@Many注解(@Result(many=@Many)())
+@One(一对一)|代替了`<assocation>`标签,是多表查询的关键,在注解中用来指定子查询返回单一对象<br>@One注解属性介绍:<br>select:指定用来多表查询的sqlmapper<br>使用格式:@Result(column="",property="",one=@One(select= ""))
+@Many(多对一)|代替了`<collection>`标签,是多表查询的关键,在注解中用来指定子查询返回对象集合<br>使用格式:@Result(property="",column="",many=@Many(select=""))
 
+### 6.3 一对一查询
+使用sql语句
+>select * from orders;
+>select * from user where id=查询出订单的uid;
 
+使用注解配置Mapper
+```java
+public interface OrderMapper {
+    @Select("select * from orders")
+    @Results({
+        @Result(id=true,property = "id",column = "id"),
+        @Result(property = "ordertime",column = "ordertime"),
+        @Result(property = "total",column = "total"),
+        @Result(property = "user",column = "uid",javaType = User.class,one = @One(select = "com.lagou.mapper.UserMapper.findById"))
+    })
+    List<Order> findAll();
+}
+public interface UserMapper {
+    @Select("select * from user where id=#{id}")
+    User findById(int id);
+}
+```
 
+### 6.3  一对多查询
+使用sql语句
+>select * from user;
+>select * from orders where uid=查询出用户的id;
 
+使用注解配置Mapper
+```java
+public interface UserMapper {
+    @Select("select * from user")
+    @Results({
+        @Result(id = true,property = "id",column = "id"),
+        @Result(property = "username",column = "username"),
+        @Result(property = "password",column = "password"),
+        @Result(property = "birthday",column = "birthday"),
+        @Result(property = "orderList",column = "id",javaType = List.class,many = @Many(select ="com.lagou.mapper.OrderMapper.findByUid"))
+    })
+    List<User> findAllUserAndOrder();
+} 
+public interface OrderMapper {
+    @Select("select * from orders where uid=#{uid}")
+    List<Order> findByUid(int uid);
+}
+```
 
+### 6.4 多对多查询
+使用sql语句
+>select * from user;
+>select * from role r,user_role ur where r.id=ur.role_id and ur.user_id=用户的id
 
+使用注解配置Mapper
+```java
+public interface UserMapper {
+    @Select("select * from user")
+    @Results({
+        @Result(id = true,property = "id",column = "id"),
+        @Result(property = "username",column = "username"),
+        @Result(property = "password",column = "password"),
+        @Result(property = "birthday",column = "birthday"),
+        @Result(property = "roleList",column = "id",javaType = List.class,many = @Many(select = "com.lagou.mapper.RoleMapper.findByUid"))
+    })
+    List<User> findAllUserAndRole();
+}
+public interface RoleMapper {
+    @Select("select * from role r,user_role ur where r.id=ur.role_id and ur.user_id=#{uid}")
+    List<Role> findByUid(int uid);
+}
+```
 
+## 第七部分：Mybatis缓存
+### 7.1 一级缓存
+#### 7.1.1 一级缓存简介
+1. 第一次发起查询用户id为1的用户信息，先去找缓存中是否有id为1的用户信息，如果没有，从数据库查询用户信息。得到用户信息，将用户信息存储到一级缓存中。
+2. 如果中间sqlSession去执行commit操作（执行插入、更新、删除），则会清空SqlSession中的一级缓存，这样做的目的为了让缓存中存储的是最新的信息，避免脏读。
+3. 第二次发起查询用户id为1的用户信息，先去找缓存中是否有id为1的用户信息，缓存中有，直接从缓存中获取用户信息
 
+#### 7.1.2 一级缓存原理探究与源码分析
+一级缓存到底是什么？一级缓存什么时候被创建、一级缓存的工作流程是怎样的？相信你现在应该会有这几个疑问，那么我们本节就来研究一下一级缓存的本质  
+大家可以这样想，上面我们一直提到一级缓存，那么提到一级缓存就绕不开SqlSession,所以索性我们就直接从SqlSession，看看有没有创建缓存或者与缓存有关的属性或者方法  
+![sqlSession实现类](/assets/lagou/第一阶段/第一模块/sqlSession实现类.jpg)  
 
+调研了一圈，发现上述所有方法中，好像只有clearCache()和缓存沾点关系，那么就直接从这个方 法入手吧，分析源码时，我们要看它(此类)是谁，它的父类和子类分别又是谁，对如上关系了解了，你才会对这个类有更深的认识，分析了一圈，你可能会得到如下这个流程图  
+![一级缓存流程图](/assets/lagou/第一阶段/第一模块/一级缓存流程图.jpg) 
+再深入分析，流程走到Perpetualcache中的clear()方法之后，会调用其cache.clear()方法，那么这个cache是什么东西呢？点进去发现，cache其实就是private Map cache = new HashMap()；也就是一个Map，所以说cache.clear()其实就是map.clear()，也就是说，缓存其实就是本地存放的一个map对象，每一个SqISession都会存放一个map对象的引用，那么这个cache是何时创建的呢？
 
+你觉得最有可能创建缓存的地方是哪里呢？我觉得是Executor，为什么这么认为？因为Executor是执行器，用来执行SQL请求，而且清除缓存的方法也在Executor中执行，所以很可能缓存的创建也很有可能在Executor中，看了一圈发现Executor中有一个createCacheKey方法，这个方法很像是创建缓存的方法啊，跟进去看看，你发现createCacheKey方法是由BaseExecutor执行的，代码如下    
+```java
+CacheKey cacheKey = new CacheKey();
+//MappedStatement 的 id
+// id就是Sql语句的所在位置包名+类名+ SQL名称
+cacheKey.update(ms.getId());
+// offset 就是 0
+cacheKey.update(rowBounds.getOffset());
+// limit 就是 Integer.MAXVALUE
+cacheKey.update(rowBounds.getLimit());
+//具体的SQL语句
+cacheKey.update(boundSql.getSql());
+//后面是update 了 sql中带的参数
+cacheKey.update(value);
+...
+if (configuration.getEnvironment() != null) {
+// issue #176
+cacheKey.update(configuration.getEnvironment().getId());
+```
 
+创建缓存key会经过一系列的update方法，udate方法由一个CacheKey这个对象来执行的，这个update方法最终由updateList的list来把五个值存进去，对照上面的代码和下面的图示，你应该能理解这五个值都是什么了  
+![一级缓存key](/assets/lagou/第一阶段/第一模块/一级缓存key.jpg)  
 
+这里需要注意一下最后一个值，configuration.getEnvironment().getId()这是什么，这其实就是 定义在mybatis-config.xml中的标签，见如下。
+```xml
+<environments default="development">
+    <environment id="development">
+        <transactionManager type="JDBC"/>
+        <dataSource type="POOLED">
+            <property name="driver" value="${jdbc.driver}"/>
+            <property name="url" value="${jdbc.url}"/>
+            <property name="username" value="${jdbc.username}"/>
+            <property name="password" value="${jdbc.password}"/>
+        </dataSource>
+    </environment>
+</environments>
+```
 
+那么我们回归正题，那么创建完缓存之后该用在何处呢？总不会凭空创建一个缓存不使用吧？绝对不会的，经过我们对一级缓存的探究之后，我们发现一级缓存更多是用于查询操作，毕竟一级缓存也叫做查询缓存吧，为什么叫查询缓存我们一会儿说。我们先来看一下这个缓存到底用在哪了，我们跟踪到query方法如下：
+```java
+@Override
+public <E> List<E> query(MappedStatement ms, Object parameter, RowBounds rowBounds, ResultHandler resultHandler) throws SQLException {
+    BoundSql boundSql = ms.getBoundSql(parameter);
+    //创建缓存
+    CacheKey key = createCacheKey(ms, parameter, rowBounds, boundSql);
+    return query(ms, parameter, rowBounds, resultHandler, key, boundSql);
+} 
+@SuppressWarnings("unchecked")
+@Override
+public <E> List<E> query(MappedStatement ms, Object parameter, RowBounds rowBounds, ResultHandler resultHandler, CacheKey key, BoundSql boundSql) throws SQLException {
+    ...
+    list = resultHandler == null ? (List<E>) localCache.getObject(key) : null;
+    if (list != null) {
+    //这个主要是处理存储过程用的。
+        handleLocallyCachedOutputParameters(ms, key, parameter, boundSql);
+    } else {
+        list = queryFromDatabase(ms, parameter, rowBounds, resultHandler, key,boundSql);
+    } 
+    ...
+} 
+// queryFromDatabase 方法
+private <E> List<E> queryFromDatabase(MappedStatement ms, Object parameter,RowBounds rowBounds, ResultHandler resultHandler, CacheKey key, BoundSql boundSql) throws SQLException {
+    List<E> list;
+    localCache.putObject(key, EXECUTION_PLACEHOLDER);
+    try {
+        list = doQuery(ms, parameter, rowBounds, resultHandler, boundSql);
+    } finally {
+        localCache.removeObject(key);
+    } 
+    localCache.putObject(key, list);
+    if (ms.getStatementType() == StatementType.CALLABLE) {
+        localOutputParameterCache.putObject(key, parameter);
+    }
+    return list;
+}
+```
 
+如果查不到的话，就从数据库查，在queryFromDatabase中，会对localcache进行写入。 localcache对象的put方法最终交给Map进行存放
+```java
+private Map<Object, Object> cache = new HashMap<Object, Object>();
+@Override
+public void putObject(Object key, Object value) { cache.put(key,value);
+```
 
+### 7.2 二级缓存
+二级缓存的原理和一级缓存原理一样，第一次查询，会将数据放入缓存中，然后第二次查询则会直接去缓存中取。但是一级缓存是基于sqlSession的，而二级缓存是基于mapper文件的namespace的，也就是说多个sqlSession可以共享一个mapper中的二级缓存区域，并且如果两个mapper的namespace 相同，即使是两个mapper,那么这两个mapper中执行sql查询到的数据也将存在相同的二级缓存区域中  
+![二级缓存流程](/assets/lagou/第一阶段/第一模块/二级缓存流程.jpg) 
 
+**如何使用二级缓存** 
+首先在全局配置文件sqlMapConfig.xml文件中加入如下代码:
+```xml
+<!--开启二级缓存-->
+<settings>
+    <setting name="cacheEnabled" value="true"/>
+</settings>
+```
+其次在UserMapper.xml文件中开启缓存
+```xml
+<!--开启二级缓存-->
+<cache></cache>
+```
+我们可以看到mapper.xml文件中就这么一个空标签，其实这里可以配置,PerpetualCache这个类是mybatis默认实现缓存功能的类。我们不写type就使用mybatis默认的缓存，也可以去实现Cache接口来自定义缓存。  
+![默认二级缓存实现类](/assets/lagou/第一阶段/第一模块/默认二级缓存实现类.jpg)  
+```java
+public class PerpetualCache implements Cache {
+    private final String id;
+    private MapcObject, Object> cache = new HashMapC);
+    public PerpetualCache(String id) { 
+        this.id = id;
+    }
+}
+```  
 
+>开启了二级缓存后，还需要将要缓存的pojo实现Serializable接口，为了将缓存数据取出执行反序列化操作，因为二级缓存数据存储介质多种多样，不一定只存在内存中，有可能存在硬盘中，如果我们要再取这个缓存的话，就需要反序列化了。所以mybatis中的pojo都去实现Serializable接口
 
+**useCache和flushCache**  
+>mybatis中还可以配置userCache和flushCache等配置项，userCache是用来设置是否禁用二级缓存的，在statement中设置useCache=false可以禁用当前select语句的二级缓存，即每次查询都会发出sql去查询，默认情况是true,即该sql使用二级缓存
+```xml
+<select id="selectUserByUserId" useCache="false" resultType="com.lagou.pojo.User" parameterType="int">
+    select * from user where id=#{id}
+</select>
+```
 
+>这种情况是针对每次查询都需要最新的数据sql,要设置成useCache=false，禁用二级缓存，直接从数据库中获取  
+>在mapper的同一个namespace中，如果有其它insert、update,delete操作数据后需要刷新缓存，如果不执行刷新缓存会出现脏读。  
+>设置statement配置中的flushCache="true”属性，默认情况下为true,即刷新缓存，如果改成false则不会刷新。使用缓存时如果手动修改数据库表中的查询数据会出现脏读。  
+```xml
+<select id="selectUserByUserId" flushCache="true" useCache="false" resultType="com.lagou.pojo.User" parameterType="int">
+    select * from user where id=#{id}
+</select>
+```
+一般下执行完commit操作都需要刷新缓存，flushCache=true表示刷新缓存，这样可以避免数据库脏读。所以我们不用设置，默认即可
 
+## 7.3 二级缓存整合redis
+mybatis提供了一个eache接口，如果要实现自己的缓存逻辑，实现cache接口开发即可。mybatis本身默认实现了一个，但是这个缓存的实现无法实现分布式缓存，所以我们要自己来实现。redis分布式缓存就可以，mybatis提供了一个针对cache接口的redis实现类，该类存在mybatis-redis包中
 
+**1.pom文件**
+```xml
+<dependency>
+    <groupId>org.mybatis.caches</groupId>
+    <artifactId>mybatis-redis</artifactId>
+    <version>1.0.0-beta2</version>
+</dependency>
+```
 
+**2.配置文件Mapper.xml**
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN"
+"http://mybatis.org/dtd/mybatis-3-mapper.dtd">
+<mapper namespace="com.lagou.mapper.IUserMapper">
+    <cache type="org.mybatis.caches.redis.RedisCache" />
+    <select id="findAll" resultType="com.lagou.pojo.User" useCache="true">
+        select * from user
+    </select>
+</mapper>
+```
 
+**3.redis.properties**
+```
+redis.host=localhost
+redis.port=6379
+redis.connectionTimeout=5000
+redis.password=
+redis.database=0
+```
 
+**源码分析：**
+>RedisCache和大家普遍实现Mybatis的缓存方案大同小异，无非是实现Cache接口，并使用jedis操作缓存；不过该项目在设计细节上有一些区别；
+```java
+public final class RedisCache implements Cache {
+    public RedisCache(final String id) {
+    if (id == null) {
+        throw new IllegalArgumentException("Cache instances require anID");
+    }
+    this.id = id;
+    RedisConfig redisConfig = RedisConfigurationBuilder.getInstance().parseConfiguration();
+        pool = new JedisPool(redisConfig, redisConfig.getHost(),
+        redisConfig.getPort(),
+        redisConfig.getConnectionTimeout(),
+        redisConfig.getSoTimeout(), redisConfig.getPassword(),
+        redisConfig.getDatabase(), redisConfig.getClientName());
+    }
+}
+```
+RedisCache在mybatis启动的时候，由MyBatis的CacheBuilder创建，创建的方式很简单，就是调用RedisCache的带有String参数的构造方法，即RedisCache(String id)；而在RedisCache的构造方法中，调用了 RedisConfigu rationBuilder 来创建 RedisConfig 对象，并使用 RedisConfig 来创建JedisPool。  
 
+RedisConfig类继承了 JedisPoolConfig，并提供了host,port等属性的包装，简单看一下RedisConfig的属性：
+```java
+public class RedisConfig extends JedisPoolConfig {
+    private String host = Protocol.DEFAULT_HOST;
+    private int port = Protocol.DEFAULT_PORT;
+    private int connectionTimeout = Protocol.DEFAULT_TIMEOUT;
+    private int soTimeout = Protocol.DEFAULT_TIMEOUT;
+    private String password;
+    private int database = Protocol.DEFAULT_DATABASE;
+    private String clientName;
+```
+RedisConfig对象是由RedisConfigurationBuilder创建的，简单看下这个类的主要方法：
+```java
+public RedisConfig parseConfiguration(ClassLoader classLoader) {
+    Properties config = new Properties();
+    InputStream input = classLoader.getResourceAsStream(redisPropertiesFilename);
+    if (input != null) {
+        try {
+            config.load(input);
+        } catch (IOException e) {
+            throw new RuntimeException("An error occurred while reading classpath property '"+ redisPropertiesFilename+ "', see nested exceptions", e);
+        } finally {
+            try {
+                input.close();
+            } catch (IOException e) {
+                // close quietly
+            }
+        }
+    }
+    RedisConfig jedisConfig = new RedisConfig();
+    setConfigProperties(config, jedisConfig);
+    return jedisConfig;
+}
+```
 
+核心的方法就是parseConfiguration方法，该方法从classpath中读取一个redis.properties文件:并将该配置文件中的内容设置到RedisConfig对象中，并返回；接下来，就是RedisCache使用RedisConfig类创建完成jedisPool；在RedisCache中实现了一个简单的模板方法，用来操作Redis：
 
+```java
+private Object execute(RedisCallback callback) {
+    Jedis jedis = pool.getResource();
+    try {
+        return callback.doWithRedis(jedis);
+    } finally {
+        jedis.close();
+    }
+}
+```
 
+模板接口为RedisCallback，这个接口中就只需要实现了一个doWithRedis方法而已：
 
+```java
+public interface RedisCallback {
+    Object doWithRedis(Jedis jedis);
+}
+```
 
+接下来看看Cache中最重要的两个方法：putObject和getObject，通过这两个方法来查看mybatis-redis储存数据的格式：
+```java
+@Override
+public void putObject(final Object key, final Object value) {
+    execute(new RedisCallback() {
+        @Override
+        public Object doWithRedis(Jedis jedis) {
+            jedis.hset(id.toString().getBytes(), key.toString().getBytes(),
+            SerializeUtil.serialize(value));
+            return null;
+        }
+    });
+}
+@Override
+public Object getObject(final Object key) {
+    return execute(new RedisCallback() {
+        @Override
+        public Object doWithRedis(Jedis jedis) {
+            return SerializeUtil.unserialize(jedis.hget(id.toString().getBytes(),key.toString().getBytes()));
+        } 
+    });
+}
+```
 
+可以很清楚的看到，mybatis-redis在存储数据的时候，是使用的hash结构，把cache的id作为这个hash的key (cache的id在mybatis中就是mapper的namespace)；这个mapper中的查询缓存数据作为 hash的field,需要缓存的内容直接使用SerializeUtil存储，SerializeUtil和其他的序列化类差不多，负责对象的序列化和反序列化；
 
+## 第八部分：Mybatis插件
+### 8.1 插件简介
+一般情况下，开源框架都会提供插件或其他形式的拓展点，供开发者自行拓展。这样的好处是显而易见的，一是增加了框架的灵活性。二是开发者可以结合实际需求，对框架进行拓展，使其能够更好的工作。以MyBatis为例，我们可基于MyBatis插件机制实现分页、分表，监控等功能。由于插件和业务无关，业务也无法感知插件的存在。因此可以无感植入插件，在无形中增强功能
 
+### 8.2 Mybatis插件介绍
 
+>1. Mybatis作为一个应用广泛的优秀的ORM开源框架，这个框架具有强大的灵活性  
+>2. 在四大组件(Executor、StatementHandler、ParameterHandler、ResultSetHandler)处提供了简单易用的插件扩展机制。  
+>3. Mybatis对持久层的操作就是借助于四大核心对象。MyBatis支持用插件对四大核心对象进行拦截，对mybatis来说插件就是拦截器，用来增强核心对象的功能  
+>4. 增强功能本质上是借助于底层的动态代理实现的，换句话说，MyBatis中的四大对象都是代理对象  
 
+![mybatis四大组件](/assets/lagou/第一阶段/第一模块/mybatis四大组件.jpg)
 
+MyBatis所允许拦截的方法如下：
 
+>1. 执行器Executor (update、query、commit、rollback等方法)；
+>2. SQL语法构建器StatementHandler (prepare、parameterize、batch、updates query等方 法)；
+>3. 参数处理器ParameterHandler (getParameterObject、setParameters方法)；
+>4. 结果集处理器ResultSetHandler (handleResultSets、handleOutputParameters等方法)；
 
+### 8.3 Mybatis插件原理
+**在四大对象创建的时候**
+1. 每个创建出来的对象不是直接返回的，而是interceptorChain.pluginAll(parameterHandler);
+2. 获取到所有的Interceptor (拦截器)(插件需要实现的接口)；调用 interceptor.plugin(target);返回 target 包装后的对象
+3. 插件机制，我们可以使用插件为目标对象创建一个代理对象；AOP (面向切面)我们的插件可以为四大对象创建出代理对象，代理对象就可以拦截到四大对象的每一个执行；
 
+**拦截**
+插件具体是如何拦截并附加额外的功能的呢？以ParameterHandler来说
+```java
+public ParameterHandler newParameterHandler(MappedStatement mappedStatement,Object object, BoundSql sql, InterceptorChain interceptorChain){
+    ParameterHandler parameterHandler = mappedStatement.getLang().createParameterHandler(mappedStatement,object,sql);
+    parameterHandler = (ParameterHandler)
+    interceptorChain.pluginAll(parameterHandler);
+    return parameterHandler;
+} 
+public Object pluginAll(Object target) {
+    for (Interceptor interceptor : interceptors) {
+        target = interceptor.plugin(target);
+    } 
+    return target;
+}
+```
 
+interceptorChain保存了所有的拦截器(interceptors)，是mybatis初始化的时候创建的。调用拦截器链中的拦截器依次的对目标进行拦截或增强。interceptor.plugin(target)中的target就可以理解为mybatis中的四大对象。返回的target是被重重代理后的对象
 
+如果我们想要拦截Executor的query方法，那么可以这样定义插件
+```java
+@Intercepts({
+    @Signature(
+        type = Executor.class,
+        method = "query",
+        args={MappedStatement.class,Object.class,RowBounds.class,ResultHandler.class}
+    )
+})
+public class ExeunplePlugin implements Interceptor {
+//省略逻辑
+}
+```
+除此之外，我们还需将插件配置到sqlMapConfig.xml中
+```xml
+<plugins>
+    <plugin interceptor="com.lagou.plugin.ExamplePlugin">
+    </plugin>
+</plugins>
+```
+这样MyBatis在启动时可以加载插件，并保存插件实例到相关对象(InterceptorChain，拦截器链) 中。待准备工作做完后，MyBatis处于就绪状态。我们在执行SQL时，需要先通过DefaultSqlSessionFactory 创建 SqlSession。Executor 实例会在创建 SqlSession 的过程中被创建， Executor实例创建完毕后，MyBatis会通过JDK动态代理为实例生成代理类。这样，插件逻辑即可在 Executor相关方法被调用前执行。
 
+### 8.4 自定义插件
+#### 8.4.1 插件接口
+Mybatis 插件接口-Interceptor
+1. Intercept方法，插件的核心方法
+2. plugin方法，生成target的代理对象
+3. setProperties方法，传递插件所需参数
 
+#### 8.4.2自定义插件
+设计实现一个自定义插件
+```java
+@Intercepts ({
+    //注意看这个大花括号，也就这说这里可以定义多个@Signature对多个地方拦截，都用这个拦截器
+    @Signature (
+        type = StatementHandler .class , 
+        //这是指拦截哪个接口
+        method = "prepare"，//这个接口内的哪个方法名，不要拼错了
+        args = { Connection.class, Integer .class}),
+        // 这是拦截的方法的入参，按顺序写到这，不要多也不要少，如果方法重载，可是要通过方法名和入参来确定唯一的
+})
+public class MyPlugin implements Interceptor {
+    private final Logger logger = LoggerFactory.getLogger(this.getClass());
+    // //这里是每次执行操作的时候，都会进行这个拦截器的方法内
+    @Override
+    public Object intercept(Invocation invocation) throws Throwable {
+        //增强逻辑
+        System.out.println("对方法进行了增强....")；
+        return invocation.proceed(); //执行原方法
+    }
+    /**
+    * //主要是为了把这个拦截器生成一个代理放到拦截器链中
+    * ^Description包装目标对象 为目标对象创建代理对象
+    * @Param target为要拦截的对象
+    * @Return代理对象
+    */
+    @Override
+    public Object plugin(Object target) {
+        System.out.println("将要包装的目标对象："+target);
+        return Plugin.wrap(target,this);
+    } 
+    /**获取配置文件的属性**/
+    //插件初始化的时候调用，也只调用一次，插件配置的属性从这里设置进来
+    @Override
+    public void setProperties(Properties properties) {
+        System.out.println("插件配置的初始化参数："+properties );
+    }
+}
+```
 
+sqlMapConfig.xml
+```xml
+<plugins>
+    <plugin interceptor="com.lagou.plugin.MySqlPagingPlugin">
+        <!--配置参数-->
+        <property name="name" value="Bob"/>
+    </plugin>
+</plugins>
+```
 
+mapper接口
+```java
+public interface UserMapper {
+    List<User> selectUser();
+}
+```
 
+mapper.xml
+```xml
+<mapper namespace="com.lagou.mapper.UserMapper">
+    <select id="selectUser" resultType="com.lagou.pojo.User">
+        SELECT
+        id,username
+        FROM
+        user
+    </select>
+</mapper>
+```
 
+### 8.5 源码分析
+**执行插件逻辑**  
+Plugin实现了 InvocationHandler接口，因此它的invoke方法会拦截所有的方法调用。invoke方法会对所拦截的方法进行检测，以决定是否执行插件逻辑。该方法的逻辑如下：
+```java
+// -Plugin
+public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+    try {
+        /*
+        *获取被拦截方法列表，比如：
+        * signatureMap.get(Executor.class), 可能返回 [query, update, commit]
+        */
+        Set<Method> methods = signatureMap.get(method.getDeclaringClass());
+        //检测方法列表是否包含被拦截的方法
+        if (methods != null && methods.contains(method)) {
+        //执行插件逻辑
+        return interceptor.intercept(new Invocation(target,method,args));
+        //执行被拦截的方法
+        return method.invoke(target, args);
+    } catch(Exception e){}
+}
+```
 
+invoke方法的代码比较少，逻辑不难理解。首先,invoke方法会检测被拦截方法是否配置在插件的@Signature注解中，若是，则执行插件逻辑，否则执行被拦截方法。插件逻辑封装在intercept中，该方法的参数类型为Invocationo Invocation主要用于存储目标类，方法以及方法参数列表。下面简单看一下该类的定义
+```java
+public class Invocation {
+    private final Object target;
+    private final Method method;
+    private final Object[] args;
+    public Invocation(Object targetf Method method, Object[] args) {
+    this.target = target;
+    this.method = method;
+    //省略部分代码
+    public Object proceed() throws InvocationTargetException, IllegalAccessException
+    { //调用被拦截的方法
+>> —
+```
 
+### 8.6 pageHelper分页插件
+MyBati s可以使用第三方的插件来对功能进行扩展，分页助手PageHelper是将分页的复杂操作进行封装，使用简单的方式即可获得分页的相关数据  
+开发步骤：
+>1. 导入通用PageHelper的坐标
+>2. 在mybatis核心配置文件中配置PageHelper插件
+>3. 测试分页数据获取
 
+导入通用PageHelper坐标
+```xml
+<dependency>
+    <groupId>com.github.pagehelper</groupId>
+    <artifactId>pagehelper</artifactId>
+    <version>3.7.5</version>
+</dependency>
+<dependency>
+    <groupId>com.github.jsqlparser</groupId>
+    <artifactId>jsqlparser</artifactId>
+    <version>0.9.1</version>
+</dependency>
+```
 
+在mybatis核心配置文件中配置PageHelper插件
+```xml
+<!--注意：分页助手的插件 配置在通用馆mapper之前*-->
+<plugin interceptor="com.github.pagehelper.PageHelper">
+    <!-- 指定方言 -->
+    <property name="dialect" value="mysql"/>
+</plugin>
+```
 
+测试分页代码实现
+```java
+@Test
+public void testPageHelper() {
+    //设置分页参数
+    PageHelper.startPage(1, 2);
+    List<User> select = userMapper2.select(null);
+    for (User user : select) {
+        System.out.println(user);
+    }
+}
+```
+
+获得分页相关的其他参数
+```java
+//其他分页的数据
+PageInfo<User> pageInfo = new PageInfo<User>(select);
+System.out.println("总条数："+pageInfo.getTotal());
+System.out.println("总页数："+pageInfo. getPages ());
+System.out.println("当前页："+pageInfo. getPageNum());
+System.out.println("每页显万长度："+pageInfo.getPageSize());
+System.out.println("是否第一页："+pageInfo.isIsFirstPage());
+System.out.println("是否最后一页："+pageInfo.isIsLastPage());
+```
+
+### 8.7 通用Mapper
+**什么是通用Mapper**  
+通用Mapper就是为了解决单表增删改查，基于Mybatis的插件机制。开发人员不需要编写SQL,不需要在DAO中增加方法，只要写好实体类，就能支持相应的增删改查方法
+
+**如何使用**  
+1. 首先在maven项目，在pom.xml中引入mapper的依赖
+2. Mybatis配置文件中完成配置
+3. 实体类设置主键
+4. 定义通用mapper
+5. 测试
+
+首先在maven项目，在pom.xml中引入mapper的依赖
+```xml
+<dependency>
+    <groupId>tk.mybatis</groupId>
+    <artifactId>mapper</artifactId>
+    <version>3.1.2</version>
+</dependency
+```
+
+Mybatis配置文件中完成配置
+```xml
+<plugins>
+    <!--分页插件：如果有分页插件，要排在通用mapper之前-->
+    <plugin interceptor="com.github.pagehelper.PageHelper">
+        <property name="dialect" value="mysql"/>
+    </plugin>
+    <plugin interceptor="tk.mybatis.mapper.mapperhelper.MapperInterceptor">
+        <!-- 通用Mapper接口，多个通用接口用逗号隔开 -->
+        <property name="mappers" value="tk.mybatis.mapper.common.Mapper"/>
+    </plugin>
+</plugins>
+```
+
+实体类设置主键
+```java
+@Table(name = "t_user")
+public class User {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Integer id;
+    private String username;
+}
+```
+
+定义通用mapper
+```java
+import com.lagou.domain.User;
+import tk.mybatis.mapper.common.Mapper;
+public interface UserMapper extends Mapper<User> {
+}
+```
+
+测试
+```java
+public class UserTest {
+    @Test
+    public void test1() throws IOException {
+        Inputstream resourceAsStream =Resources.getResourceAsStream("sqlMapConfig.xml");
+        SqlSessionFactory build = newSqlSessionFactoryBuilder().build(resourceAsStream);
+        SqlSession sqlSession = build.openSession();
+        UserMapper userMapper = sqlSession.getMapper(UserMapper.class);
+        User user = new User();
+        user.setId(4);
+        //(1)mapper基础接口
+        //select 接口
+        User user1 = userMapper.selectOne(user); 
+        //根据实体中的属性进行查询，只能有一个返回值
+        List<User> users = userMapper.select(null); 
+        //查询全部结果
+        userMapper.selectByPrimaryKey(1); 
+        //根据主键字段进行查询，方法参数必须包含完 整的主键属性，查询条件使用等号
+        userMapper.selectCount(user); 
+        //根据实体中的属性查询总数，查询条件使用等号
+        // insert 接口
+        int insert = userMapper.insert(user); 
+        //保存一个实体，null值也会保存，不会使用数据库默认值
+        int i = userMapper.insertSelective(user); 
+        //保存实体，null的属性不会保存，会使用数据库默认值
+        // update 接口
+        int i1 = userMapper.updateByPrimaryKey(user);
+        //根据主键更新实体全部字段，null值会被更新
+        // delete 接口
+        int delete = userMapper.delete(user); 
+        //根据实体属性作为条件进行删除，查询条件使用等号
+        userMapper.deleteByPrimaryKey(1); 
+        //根据主键字段进行删除，方法参数必须包含完整的主键属性
+        //(2)example方法
+        Example example = new Example(User.class);
+        example.createCriteria().andEqualTo("id", 1);
+        example.createCriteria().andLike("val", "1");
+        //自定义查询
+        List<User> users1 = userMapper.selectByExample(example);
+    }
+}
+```
